--- a/topquizz/app/src/main/res/layout/activity_main.xml
+++ b/topquizz/app/src/main/res/layout/activity_main.xml
@@ -14,20 +14,24 @@
         android:layout_height="wrap_content"
         android:text="Top Quizz!"
 
-        ></TextView>
+        />
 
     <EditText
         android:id="@+id/activity_main_MyEditText"
         android:layout_width="273dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"></EditText>
+        android:layout_gravity="center"
+
+        />
 
     <Button
         android:id="@+id/activity_main_Mybutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        ></Button>
+        android:text="let's go"
+
+        />
 
 
 </LinearLayout>
