--- a/topquizz/app/src/main/res/layout/activity_main.xml
+++ b/topquizz/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.LucasVerrier.topquizz.MainActivity"
+    tools:context="com.LucasVerrier.topquizz.controler.MainActivity"
     tools:ignore="ExtraText">
 
     <TextView
